2009-03-08  David King  <amigadave@gmail.com>

	* data/imp_mainwindow_ui.xml: Move from src/.
	* src/*.[cpp|h]: Remove executable bit.

2009-03-08  David King  <amigadave@gmail.com>

	* .gitignore: New file.
	* AUTHORS, COPYING, ChangeLog, INSTALL, NEWS, README: Remove
	executable bit.
	* autogen.sh: Add autogen script.
	* configure.ac, Makefile.am: Alter for non-recursive make.

2009-01-20  David King  <amigadave@gmail.com>

	* Initial commit.

2008-10-10  David King  <amigadave@gmail.com>

	* First version.